create bulk delete & export to csv assets
